--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     --color-text-primary: #d9d9d9; // rgb(255, 255, 255, 0.85)
     --color-text-secondary: #8c8c8c; // rgb(255, 255, 255, 0.55)
     --color-link: #f14646;
-    --color-link-complementary: #16161D;
+    --color-link-complementary: #fff;
     --color-border: #aaa;
     --color-input-text: #d9d9d9;
     --color-input-text-hover: #16161D;
@@ -36,7 +36,7 @@
 }
 body {
   font-family: "Iowan Old Style", "Apple Garamond", Baskerville, "Times New Roman", "Droid Serif", Times, "Source Serif Pro", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 12pt;
+  font-size: 1em;
 }
 */
 
@@ -69,7 +69,7 @@ body {
 #site {
   box-sizing: border-box;
   margin: 4em auto;
-  max-width: 480px;
+  max-width: calc(1em * 30); /* 480px for a 16px font size */
 }
 #site-header {
   margin-bottom: 4em;
@@ -95,7 +95,7 @@ a {
   color: inherit;
   text-decoration: underline;
   text-decoration-style: dotted;
-  text-underline-offset: 5px;
+  text-underline-offset: .313rem;
 }
 a:active,
 a:focus,
@@ -106,9 +106,13 @@ a:hover {
 a:focus-visible {
   background-color: var(--color-link);
   color: var(--color-link-complementary);
+  text-decoration: none;
+  outline: .188rem solid var(--color-link);
+  outline-offset: 0;
 }
 a:focus-visible img {
-  filter: hue-rotate(90deg);
+  outline: .188rem solid var(--color-link);
+  outline-offset: 0;
 }
 
 p {
@@ -150,7 +154,7 @@ mark {
   background-color: rgb(255, 255, 0, 0.85);
 }
 blockquote {
-  border-left: 1px solid var(--color-border);
+  border-left: .063rem solid var(--color-border);
   margin: 1em 0;
   padding: 0 0 0 1em;
 }
@@ -196,7 +200,7 @@ figure p {
 input,
 textarea {
   background-color: var(--color-input-background);
-  border: 1px solid var(--color-border);
+  border: .063rem solid var(--color-border);
   border-radius: 0;
   box-sizing: border-box;
   color: var(--color-input-text);
@@ -206,12 +210,14 @@ textarea {
   padding: .5em;
 }
 input:focus,
-textarea:focus {
-  outline: 3px solid var(--color-link);
-  outline-offset: -1px;
+input:focus-visible,
+textarea:focus,
+textarea:focus-visible {
+  outline: .188rem solid var(--color-link);
+  outline-offset: -.063rem;
 }
 .button {
-  border: 1px solid var(--color-border);
+  border: .063rem solid var(--color-border);
   display: inline-block;
   padding-right: .5em;
   padding-left: .5em;
@@ -238,8 +244,15 @@ input[type="submit"]:hover,
   background-color: var(--color-input-background-hover);
   border-color: var(--color-input-background-hover);
 }
-input[type="submit"]:focus {
-  outline: none;
+input[type="submit"]:focus-visible,
+.button:focus-visible,
+.form-submit:focus-visible {
+  background-color: var(--color-link);
+  border-color: transparent;
+  color: var(--color-link-complementary);
+  text-decoration: none;
+  outline: .188rem solid var(--color-link);
+  outline-offset: 0;
 }
 textarea {
   width: 100%;
@@ -358,13 +371,13 @@ a:focus-visible .post-meta {
   margin-bottom: 2em;
 }
 .post-list-selected-label {
-  border-bottom: 1px solid var(--color-border);
+  border-bottom: .063rem solid var(--color-border);
   color: var(--color-text-secondary);
   display: inline-block;
   font-size: .8em;
 }
 .post-list-selected-content {
-  border-left: 1px solid var(--color-border);
+  border-left: .063rem solid var(--color-border);
   padding: 1em 0 1em 1em;
 }
 .post-list:last-child {
@@ -454,7 +467,7 @@ a:focus-visible .post-meta {
   text-decoration: none;
 }
 .comment-content {
-  border-left: 1px solid var(--color-border);
+  border-left: .063rem solid var(--color-border);
   padding-left: 1em;
 }
 .comment-content p {
@@ -462,7 +475,7 @@ a:focus-visible .post-meta {
   margin-bottom: .5em;
 }
 .comment-preview {
-  border: 1px solid var(--color-border);
+  border: .063rem solid var(--color-border);
   margin-bottom: 2em;
   padding: 1em;
 }
@@ -483,7 +496,7 @@ a:focus-visible .post-meta {
 }
 .comment-message {
   border-style: solid;
-  border-width: 4px;
+  border-width: .188rem;
   display: block;
   font-weight: bold;
   margin-bottom: 2em;
@@ -633,7 +646,7 @@ a:focus-visible .post-meta {
   .content-label,
   .label,
   .post-selected-label {
-    border: 1px solid var(--color-border);
+    border: .063rem solid var(--color-border);
   }
   input:focus,
   textarea:focus {
@@ -646,7 +659,9 @@ a:focus-visible .post-meta {
  *
  * Styles used to display the site on mobile depending on the screen size.
  */
-@media only screen and (max-width: 600px) {
+
+/* Default max-width : 480px + margins */
+@media only screen and (max-width: calc(1em * 30 + (4em * 2))) {
   #site {
     font-size: .95em;
     margin-top: 2em;
@@ -672,7 +687,8 @@ a:focus-visible .post-meta {
   }
 }
 
-@media only screen and (max-width: 380px) {
+/* Default max-width : 320px + margins */
+@media only screen and (max-width: calc(1em * 20 + (2em * 2))) {
   #site {
     font-size: .9em;
     width: 90%;
