--- a/style.css
+++ b/style.css
@@ -431,10 +431,16 @@ textarea {
 }
 .comment,
 .ping {
-  margin: 2em 0 3em;
+  border-bottom: .063rem solid var(--color-border);
+  margin: 2em 0 1.5em;
+  padding-bottom: 1.5em;
+}
+.comment:last-child,
+.ping:last-child {
+  border-bottom: none;
 }
 .comment-meta {
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
 }
 .comment-author {
   color: var(--color-text-primary);
@@ -443,10 +449,6 @@ textarea {
 }
 .comment-date {
   font-size: .9em;
-}
-.comment-content {
-  border-left: .063rem solid var(--color-border);
-  padding-left: 1em;
 }
 .comment-content p {
   margin-top: .5em;
@@ -466,6 +468,10 @@ textarea {
 #comment-form h3 {
   margin-bottom: 1em;
 }
+#comment-form #c_content {
+  width: 100%;
+  max-width: none;
+}
 #comment-form .remember {
   margin: .5em 0;
 }
@@ -473,22 +479,8 @@ textarea {
   margin-left: 0;
 }
 .comment-message {
-  border-style: solid;
-  border-width: .188rem;
-  display: block;
   font-weight: bold;
   margin-bottom: 2em;
-  padding: .5em;
-  text-align: center;
-}
-.message-green {
-  border-color: green;
-}
-.message-orange {
-  border-color: orange;
-}
-.message-red {
-  border-color: red;
 }
 .comment-private {
   margin-top: 4em;
