--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ body {
  * Content formatting
  */
 a {
-  border-bottom: .063rem dotted var(--color-text-primary);
+  border-bottom: .063em dotted var(--color-text-primary);
   color: inherit;
   text-decoration: none;
 }
@@ -184,7 +184,7 @@ mark {
   background-color: #fbf7a6;
 }
 blockquote {
-  border-left: .063rem solid var(--color-border);
+  border-left: .063em solid var(--color-border);
   margin: 1em 0;
   padding: 0 0 0 1em;
 }
@@ -224,7 +224,7 @@ figure p {
 input,
 textarea {
   background-color: var(--color-input-background);
-  border: .063rem solid var(--color-border);
+  border: .063em solid var(--color-border);
   border-radius: 0;
   box-sizing: border-box;
   color: var(--color-input-text);
@@ -234,7 +234,7 @@ textarea {
   padding: .5em;
 }
 .button {
-  border: .063rem solid var(--color-border);
+  border: .063em solid var(--color-border);
   display: inline-block;
   padding-right: .5em;
   padding-left: .5em;
@@ -318,7 +318,7 @@ textarea {
   margin: .5em 0 0;
 }
 .label {
-  border: .063rem solid var(--color-border);
+  border: .063em solid var(--color-border);
   display: inline-block;
   font-size: .9em;
   line-height: 1;
@@ -424,7 +424,7 @@ textarea {
 .reactions-block {
   margin: 4em 0;
 }
-#comments-list {
+#reactions-list {
   list-style: none;
   margin: 2em 0 4em;
   padding: 0;
@@ -438,14 +438,14 @@ textarea {
 .reaction-title {
   margin-top: 2em;
 }
-.reaction {
-  border-left: .063rem solid var(--color-border);
+.comment {
+  border-left: .063em solid var(--color-border);
   padding-left: 1em;
 }
 .comment.me {
-  border-top: .063rem solid var(--color-border);
-  border-right: .063rem solid var(--color-border);
-  border-bottom: .063rem solid var(--color-border);
+  border-top: .063em solid var(--color-border);
+  border-right: .063em solid var(--color-border);
+  border-bottom: .063em solid var(--color-border);
   padding-top: 1em;
   padding-right: 1em;
 }
@@ -461,7 +461,7 @@ textarea {
   font-size: .9em;
 }
 .comment-preview {
-  border: .063rem solid var(--color-border);
+  border: .063em solid var(--color-border);
   margin-bottom: 2em;
   padding: 1em;
 }
@@ -514,8 +514,11 @@ textarea {
 .ping-date {
   font-size: .9em;
 }
+#trackback-link-container {
+  position: relative;
+}
 #trackback-url {
-  border-bottom: .063rem dotted var(--color-text-primary);
+  border-bottom: .063em dotted var(--color-text-primary);
 }
 #trackback-url:focus,
 #trackback-url:hover {
@@ -526,9 +529,13 @@ textarea {
 }
 #trackback-url-copied {
   background-color: var(--color-input-background);
+  bottom: -125%;
   color: var(--color-input-text);
+  display: inline-block;
+  left: 0;
   line-height: 1;
-  padding: 0 .25em;
+  padding: .25em;
+  position: absolute;
 }
 
 /**
@@ -581,7 +588,7 @@ textarea {
   margin: 1em 0;
 }
 #site-footer .widget h2 {
-  font-size: 1rem;
+  font-size: 1em;
   margin: 0 0 .5em;
 }
 #site-footer p {
@@ -637,10 +644,10 @@ textarea {
   display: block;
   font-size: 1em;
   height: auto;
-  left: .3125rem;
+  left: .3125em;
   line-height: normal;
-  padding: .5rem;
-  top: .3125rem;
+  padding: .5em;
+  top: .3125em;
   width: auto;
   z-index: 100000;
 }
@@ -826,8 +833,7 @@ textarea {
   #post-footer-print {
     display: block;
   }
-  .comment,
-  .ping {
+  .comment {
     border-left: 0;
     padding-left: 0;
   }
