--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ body {
  * Content formatting
  */
 a {
-  border-bottom: .063em dotted var(--color-text-primary);
+  border-bottom: .063rem dotted var(--color-text-primary);
   color: inherit;
   text-decoration: none;
 }
@@ -190,7 +190,7 @@ mark {
   background-color: #fbf7a6;
 }
 blockquote {
-  border-left: .063em solid var(--color-border);
+  border-left: .063rem solid var(--color-border);
   margin: 1em 0;
   padding: 0 0 0 1em;
 }
@@ -230,7 +230,7 @@ figure p {
 input,
 textarea {
   background-color: var(--color-input-background);
-  border: .063em solid var(--color-border);
+  border: .063rem solid var(--color-border);
   border-radius: 0;
   box-sizing: border-box;
   color: var(--color-input-text);
@@ -240,7 +240,7 @@ textarea {
   padding: .5em;
 }
 .button {
-  border: .063em solid var(--color-border);
+  border: .063rem solid var(--color-border);
   display: inline-block;
   padding-right: .5em;
   padding-left: .5em;
@@ -327,7 +327,7 @@ textarea {
   margin: .5em 0 0;
 }
 .label {
-  border: .063em solid var(--color-border);
+  border: .063rem solid var(--color-border);
   display: inline-block;
   font-size: .9em;
   line-height: 1;
@@ -448,13 +448,13 @@ textarea {
   margin-top: 2em;
 }
 .comment {
-  border-left: .063em solid var(--color-border);
+  border-left: .063rem solid var(--color-border);
   padding-left: 1em;
 }
 .comment.me {
-  border-top: .063em solid var(--color-border);
-  border-right: .063em solid var(--color-border);
-  border-bottom: .063em solid var(--color-border);
+  border-top: .063rem solid var(--color-border);
+  border-right: .063rem solid var(--color-border);
+  border-bottom: .063rem solid var(--color-border);
   padding-top: 1em;
   padding-right: 1em;
 }
@@ -470,7 +470,7 @@ textarea {
   font-size: .9em;
 }
 .comment-preview {
-  border: .063em solid var(--color-border);
+  border: .063rem solid var(--color-border);
   margin-bottom: 2em;
   padding: 1em;
 }
@@ -527,7 +527,7 @@ textarea {
   position: relative;
 }
 #trackback-url {
-  border-bottom: .063em dotted var(--color-text-primary);
+  border-bottom: .063rem dotted var(--color-text-primary);
 }
 #trackback-url:focus,
 #trackback-url:hover {
@@ -653,10 +653,10 @@ textarea {
   display: block;
   font-size: 1em;
   height: auto;
-  left: .3125em;
+  left: .3125rem;
   line-height: normal;
   padding: .5em;
-  top: .3125em;
+  top: .3125rem;
   width: auto;
   z-index: 100000;
 }
