--- a/style.css
+++ b/style.css
@@ -779,7 +779,8 @@ textarea {
   #site {
     width: 90%;
   }
-  .reaction {
+  blockquote,
+  .comment {
     padding-left: .5em;
   }
   .pagination {
